data/derived/fa15/progs/unify/prog2630.ml.out
Characters 84-99:
  | Sine e' -> sin (3 * exprToString e')
                        ^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         int
